<resources>
    <!-- Global strings -->
    <string name="app_name">HeyBuddy</string>
    <string name="title_activity_maps">Map</string>

    <!-- Menu strings -->
    <string name="menu_item_1">Menu item 1</string>
    <string name="menu_item_2">Menu item 2</string>

    <!-- Map strings -->
    <string name="pls_accept_GPS">Veuillez activer votre GPS</string>
    <string name="run_GPS">Lancer GPS</string>
    <string name="cancel">Annuler</string>
    <string name="title_activity_connection">ConnectionActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Login & Signup strings -->
    <string name="title_activity_signup">Inscription</string>
    <string name="title_activity_login">Connexion</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="bnt_signup">S\'inscrire</string>
    <string name="btn_login">Se connecter</string>
    <string name="link_signup">Vous n\'avez pas de compte ? Inscrivez-vous !</string>
    <string name="btn_google_signup">Se connecter avec Google</string>

    <!-- Navigation -->
    <string name="drawer_open">Ouvrir le menu</string>
    <string name="drawer_close">Fermer le menu</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
